kustomize/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test
  labels:
    app: dcrunch-db
  name: dcrunch-db
spec:
  externalName: dcrunch-mariadb.crxpjmjsqbnh.us-east-2.rds.amazonaws.com
  selector:
    app: mysql-service
  type: ExternalName
