kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parser
  #namespace: dev
spec:
  selector:
    app: parser
  type: NodePort
  ports:
  - port: 3001
    targetPort: 3001
