kustomize/ui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parsr-ui
  #namespace: dev
spec:
  selector:
    app: parsr-ui
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
