kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parser.ml.documentcrunch.com  
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: ml-group    
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: "alb"

    #alb.ingress.kubernetes.io/tags: Environment=<environment-name>,Owner=<your-name>
    # For each `listen-ports` object defined an ALB lister is created
    # For each listener created the rules defined in `spec` apply with some basic caveats
    # SSL redirect rule is applied only to the HTTP listener.  Cognito authentication rule
    # is applied to the HTTPS listener
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # Detailed redirect settings
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTPS"
    # Authentication type must be cognito
    #alb.ingress.kubernetes.io/auth-type: cognito
    # Required parameter for ALB/Cognito integration
    #alb.ingress.kubernetes.io/auth-scope: openid
    # Session timeout on authentication credentials
    #alb.ingress.kubernetes.io/auth-session-timeout: '3600'
    # Session cookie name
    #alb.ingress.kubernetes.io/auth-session-cookie: AWSELBAuthSessionCookie
    # Action to take when a request is not authenticated
    #alb.ingress.kubernetes.io/auth-on-unauthenticated-request: authenticate
    # Cognito parameters required for creation of authentication rules
    # The subdomain name only is sufficient for `UserPoolDomain`
    # e.g. if `FQDN=app.auth.ap-northeast-1.amazoncognito.com` then `UserPoolDomain=app`
    #alb.ingress.kubernetes.io/auth-idp-cognito: '{"UserPoolArn": "arn:aws:cognito-idp:us-east-2:111084481543:userpool/us-east-2_220NvEbnn","UserPoolClientId":"7ualn0lonlhlm7c44805dn2ll4","UserPoolDomain":"auth.ml.documentcrunch.com"}'
    # ACM certificate ARN for your SSL domain
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:111084481543:certificate/708add29-dd66-459b-b696-2c33c2f4d32a
spec:
  #ingressClassName: alb
  rules:
    # If you are using ExternalDNS, this will become your applications FQDN
    - host: parser.ml.documentcrunch.com
      http:
       paths:
      # This first path should perform an ssl-redirect as below
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ssl-redirect
              # Configured via the redirect settings in the annotations
              port:
                name: use-annotation
        - path: /
          pathType: Prefix
          backend:
            service:
              name: parser
              port:
                number: 3001
